@@ -1,6 +1,7 @@
 0.98b
 
 * Added Netflix extension (Queue and Reviews).
+* When adding feeds with no datetime it will set the timestamp to 0 for events (only on initial creation). This is to avoid feed cluttering when adding new feeds that are invalid.
 
 0.98a
 
